--- a/index.html
+++ b/index.html
@@ -24,6 +24,8 @@
             flex-direction: column;
             align-items: center;
             padding: 50px;
+            overflow-y: auto; /* Permite el desplazamiento vertical si es necesario */
+            max-height: 90vh; /* Asegura que la altura máxima del contenedor no exceda el 90% de la altura de la ventana */
         }
         button {
             padding: 10px 20px;
@@ -39,146 +41,238 @@
             background-color: #4CAF50;
             color: white;
         }
+        canvas {
+            max-width: 100%;
+            height: auto;
+        }
+        input[type="text"] {
+            width: 200px;
+            padding: 8px;
+            margin: 5px 0;
+        }
     </style>
 </head>
 <body>
+    <div id="header">
+        <button onclick="closeApp()">Cerrar App</button>
+        <button onclick="showUserInfo()">Ver Info</button>
+    </div>
 
-<div id="header">
-    <button onclick="closeApp()">Cerrar App</button>
-    <button onclick="showUserInfo()">Ver Info</button>
-</div>
+    <div id="main">
+        <!-- Aquí se mostrarán las diferentes vistas -->
+    </div>
 
-<div id="main">
-    <!-- Aquí se mostrarán las diferentes vistas -->
-</div>
+    <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
+    <script>
+        let userInfo = {
+            nombre: "",
+            peso: "",
+            altura: ""
+        };
 
-<script>
-    let userInfo = {
-        nombre: "",
-        peso: "",
-        altura: ""
-    };
+        function closeApp() {
+            alert('App cerrada');
+        }
 
-    function closeApp() {
-        alert('App cerrada');
-    }
+        function showUserInfo() {
+            alert(`Nombre: ${userInfo.nombre}\nPeso: ${userInfo.peso}\nAltura: ${userInfo.altura}`);
+        }
 
-    function showUserInfo() {
-        alert(`Nombre: ${userInfo.nombre}\nPeso: ${userInfo.peso}\nAltura: ${userInfo.altura}`);
-    }
+        function showLoginScreen() {
+            const main = document.getElementById('main');
+            main.innerHTML = `
+                <h2>Inicio de Sesión</h2>
+                <label>Nombre de Usuario:</label>
+                <input type="text" id="username"><br><br>
+                <label>Peso (en kg):</label>
+                <input type="text" id="weight" placeholder="Peso en kg"><br><br>
+                <label>Altura (en cm):</label>
+                <input type="text" id="height" placeholder="Altura en cm"><br><br>
+                <button class="save-button" onclick="login()">Iniciar Sesión</button>
+            `;
+        }
 
-    function showLoginScreen() {
-        const main = document.getElementById('main');
-        main.innerHTML = `
-            <h2>Inicio de Sesión</h2>
-            <label>Nombre de Usuario:</label>
-            <input type="text" id="username"><br><br>
-            <label>Peso:</label>
-            <input type="text" id="weight"><br><br>
-            <label>Altura:</label>
-            <input type="text" id="height"><br><br>
-            <button class="save-button" onclick="login()">Iniciar Sesión</button>
-        `;
-    }
+        function login() {
+            userInfo.nombre = document.getElementById('username').value;
+            userInfo.peso = document.getElementById('weight').value;
+            userInfo.altura = document.getElementById('height').value;
+            showMainScreen();
+        }
 
-    function login() {
-        userInfo.nombre = document.getElementById('username').value;
-        userInfo.peso = document.getElementById('weight').value;
-        userInfo.altura = document.getElementById('height').value;
-        showMainScreen();
-    }
+        function showMainScreen() {
+            const main = document.getElementById('main');
+            main.innerHTML = `
+                <h2>Bienvenido, ${userInfo.nombre}</h2>
+                <button onclick="manageRoutines()">Rutinas</button><br>
+                <button onclick="editUserInfo()">Editar Información del Usuario</button><br>
+                <button onclick="registerExercise()">Registrar Ejercicio Realizado</button><br>
+                <button onclick="viewProgress()">Ver Progreso</button><br>
+                <button class="back-button" onclick="closeApp()">Salir</button>
+            `;
+        }
 
-    function showMainScreen() {
-        const main = document.getElementById('main');
-        main.innerHTML = `
-            <h2>Bienvenido, ${userInfo.nombre}</h2>
-            <button onclick="manageRoutines()">Rutinas</button><br>
-            <button onclick="editUserInfo()">Editar Información del Usuario</button><br>
-            <button onclick="registerExercise()">Registrar Ejercicio Realizado</button><br>
-            <button onclick="viewProgress()">Ver Progreso</button><br>
-            <button class="back-button" onclick="closeApp()">Salir</button>
-        `;
-    }
+        function manageRoutines() {
+            const main = document.getElementById('main');
+            main.innerHTML = `
+                <h2>Rutinas</h2>
+                <button onclick="registerRoutines()">Registrar Rutinas</button><br>
+                <button onclick="viewRoutines()">Ver Rutinas</button><br>
+                <button onclick="deleteRoutines()">Eliminar Rutinas</button><br>
+                <button class="back-button" onclick="showMainScreen()">Atrás</button>
+            `;
+        }
 
-    function manageRoutines() {
-        const main = document.getElementById('main');
-        main.innerHTML = `
-            <h2>Rutinas</h2>
-            <button onclick="registerRoutines()">Registrar Rutinas</button><br>
-            <button onclick="viewRoutines()">Ver Rutinas</button><br>
-            <button onclick="deleteRoutines()">Eliminar Rutinas</button><br>
-            <button class="back-button" onclick="showMainScreen()">Atrás</button>
-        `;
-    }
+        function registerRoutines() {
+            const main = document.getElementById('main');
+            main.innerHTML = `
+                <h2>Registrar Rutinas</h2>
+                <label>Ejercicio:</label>
+                <input type="text" id="exercise"><br><br>
+                <label>Repeticiones:</label>
+                <input type="text" id="reps"><br><br>
+                <label>Series:</label>
+                <input type="text" id="sets"><br><br>
+                <label>Descripción:</label>
+                <input type="text" id="description"><br><br>
+                <button class="save-button" onclick="saveRoutine()">Guardar Rutina</button><br>
+                <button class="back-button" onclick="manageRoutines()">Atrás</button>
+            `;
+        }
 
-    function registerRoutines() {
-        const main = document.getElementById('main');
-        main.innerHTML = `
-            <h2>Registrar Rutinas</h2>
-            <label>Ejercicio:</label>
-            <input type="text" id="exercise"><br><br>
-            <label>Repeticiones:</label>
-            <input type="text" id="reps"><br><br>
-            <label>Series:</label>
-            <input type="text" id="sets"><br><br>
-            <label>Descripción:</label>
-            <input type="text" id="description"><br><br>
-            <button class="save-button" onclick="saveRoutine()">Guardar Rutina</button><br>
-            <button class="back-button" onclick="manageRoutines()">Atrás</button>
-        `;
-    }
+        function saveRoutine() {
+            alert('Rutina guardada con éxito!');
+            manageRoutines();
+        }
 
-    function saveRoutine() {
-        alert('Rutina guardada con éxito!');
-        manageRoutines();
-    }
+        function viewRoutines() {
+            const main = document.getElementById('main');
+            main.innerHTML = `
+                <h2>Ver Rutinas</h2>
+                <ul>
+                    <li>Rutina 1: Ejercicio A, 10 repeticiones, 3 series</li>
+                    <li>Rutina 2: Ejercicio B, 15 repeticiones, 4 series</li>
+                </ul>
+                <button class="back-button" onclick="manageRoutines()">Atrás</button>
+            `;
+        }
 
-    function viewRoutines() {
-        alert('Funcionalidad no implementada en la versión web.');
-        manageRoutines();
-    }
+        function deleteRoutines() {
+            const main = document.getElementById('main');
+            main.innerHTML = `
+                <h2>Eliminar Rutinas</h2>
+                <ul>
+                    <li>Rutina 1 <button onclick="deleteRoutine('Rutina 1')">Eliminar</button></li>
+                    <li>Rutina 2 <button onclick="deleteRoutine('Rutina 2')">Eliminar</button></li>
+                </ul>
+                <button class="back-button" onclick="manageRoutines()">Atrás</button>
+            `;
+        }
 
-    function deleteRoutines() {
-        alert('Funcionalidad no implementada en la versión web.');
-        manageRoutines();
-    }
+        function deleteRoutine(routine) {
+            alert(`Rutina ${routine} eliminada.`);
+            deleteRoutines(); // Actualizar la vista de eliminación de rutinas
+        }
 
-    function editUserInfo() {
-        const main = document.getElementById('main');
-        main.innerHTML = `
-            <h2>Editar Información del Usuario</h2>
-            <label>Nombre de Usuario:</label>
-            <input type="text" id="username" value="${userInfo.nombre}"><br><br>
-            <label>Peso:</label>
-            <input type="text" id="weight" value="${userInfo.peso}"><br><br>
-            <label>Altura:</label>
-            <input type="text" id="height" value="${userInfo.altura}"><br><br>
-            <button class="save-button" onclick="saveUserInfo()">Guardar Cambios</button><br>
-            <button class="back-button" onclick="showMainScreen()">Atrás</button>
-        `;
-    }
+        function editUserInfo() {
+            const main = document.getElementById('main');
+            main.innerHTML = `
+                <h2>Editar Información del Usuario</h2>
+                <label>Nombre de Usuario:</label>
+                <input type="text" id="username" value="${userInfo.nombre}"><br><br>
+                <label>Peso (en kg):</label>
+                <input type="text" id="weight" value="${userInfo.peso}" placeholder="Peso en kg"><br><br>
+                <label>Altura (en cm):</label>
+                <input type="text" id="height" value="${userInfo.altura}" placeholder="Altura en cm"><br><br>
+                <button class="save-button" onclick="saveUserInfo()">Guardar Cambios</button><br>
+                <button class="back-button" onclick="showMainScreen()">Atrás</button>
+            `;
+        }
 
-    function saveUserInfo() {
-        userInfo.nombre = document.getElementById('username').value;
-        userInfo.peso = document.getElementById('weight').value;
-        userInfo.altura = document.getElementById('height').value;
-        alert('Información actualizada con éxito!');
-        showMainScreen();
-    }
+        function saveUserInfo() {
+            userInfo.nombre = document.getElementById('username').value;
+            userInfo.peso = document.getElementById('weight').value;
+            userInfo.altura = document.getElementById('height').value;
+            alert('Información actualizada con éxito!');
+            showMainScreen();
+        }
 
-    function registerExercise() {
-        alert('Funcionalidad no implementada en la versión web.');
-        showMainScreen();
-    }
+        function registerExercise() {
+            alert('Funcionalidad no implementada en la versión web.');
+            showMainScreen();
+        }
 
-    function viewProgress() {
-        alert('Funcionalidad no implementada en la versión web.');
-        showMainScreen();
-    }
+        function viewProgress() {
+            const main = document.getElementById('main');
+            main.innerHTML = `
+                <h2>Ver Progreso</h2>
+                <button class="back-button" onclick="showMainScreen()">Atrás</button><br>
+                <canvas id="weightChart"></canvas><br>
+                <canvas id="heightChart"></canvas><br>
+            `;
 
-    // Iniciar mostrando la pantalla de inicio de sesión
-    showLoginScreen();
-</script>
+            const weightCtx = document.getElementById('weightChart').getContext('2d');
+            new Chart(weightCtx, {
+                type: 'line',
+                data: {
+                    labels: ['Día 1', 'Día 2', 'Día 3', 'Día 4', 'Día 5'],
+                    datasets: [{
+                        label: 'Peso (kg)',
+                        data: [70, 71, 70.5, 72, 71],
+                        borderColor: 'rgba(75, 192, 192, 1)',
+                        backgroundColor: 'rgba(75, 192, 192, 0.2)',
+                        fill: true
+                    }]
+                },
+                options: {
+                    responsive: true,
+                    plugins: {
+                        legend: {
+                            display: true
+                        },
+                        tooltip: {
+                            callbacks: {
+                                label: function(tooltipItem) {
+                                    return tooltipItem.label + ': ' + tooltipItem.raw + ' kg';
+                                }
+                            }
+                        }
+                    }
+                }
+            });
 
+            const heightCtx = document.getElementById('heightChart').getContext('2d');
+            new Chart(heightCtx, {
+                type: 'line',
+                data: {
+                    labels: ['Día 1', 'Día 2', 'Día 3', 'Día 4', 'Día 5'],
+                    datasets: [{
+                        label: 'Altura (cm)',
+                        data: [175, 175.2, 175.1, 175.3, 175.2],
+                        borderColor: 'rgba(153, 102, 255, 1)',
+                        backgroundColor: 'rgba(153, 102, 255, 0.2)',
+                        fill: true
+                    }]
+                },
+                options: {
+                    responsive: true,
+                    plugins: {
+                        legend: {
+                            display: true
+                        },
+                        tooltip: {
+                            callbacks: {
+                                label: function(tooltipItem) {
+                                    return tooltipItem.label + ': ' + tooltipItem.raw + ' cm';
+                                }
+                            }
+                        }
+                    }
+                }
+            });
+        }
+
+        // Mostrar la pantalla de inicio de sesión al cargar la página
+        showLoginScreen();
+    </script>
 </body>
 </html>
