--- a/index.html
+++ b/index.html
@@ -13,49 +13,65 @@
         }
         #header {
             display: flex;
-            justify-content: space-between;
-            padding: 20px;
-            background-color: #b0b0b0;
-            color: #000;
+            justify-content: flex-end;
+            padding: 10px;
+            background-color: #616161;
+            color: white;
+        }
+        #header button {
+            margin-left: 10px;
+            padding: 10px 20px;
+            font-size: 16px;
+            cursor: pointer;
+            background-color: #424242;
+            color: white;
+            border: none;
+            border-radius: 5px;
         }
         #main {
             display: flex;
             flex-direction: column;
             align-items: center;
-            padding: 50px;
-            overflow-y: auto; /* Permite el desplazamiento vertical si es necesario */
-            max-height: 90vh; /* Asegura que la altura máxima del contenedor no exceda el 90% de la altura de la ventana */
+            padding: 20px;
+            max-height: 90vh;
+            overflow-y: auto;
         }
         button {
-            padding: 10px 20px;
+            padding: 15px 30px;
             margin: 10px;
             font-size: 16px;
             cursor: pointer;
-            background-color: #808080;
-            color: #fff;
+            background-color: #9e9e9e;
+            color: #212121;
             border: none;
             border-radius: 5px;
         }
-        button:hover {
-            background-color: #666;
+        .back-button {
+            background-color: #757575;
+        }
+        .save-button {
+            background-color: #616161;
         }
         canvas {
             max-width: 100%;
             height: auto;
         }
         input[type="text"] {
-            width: 200px;
-            padding: 8px;
+            width: 250px;
+            padding: 10px;
             margin: 5px 0;
-            border: 1px solid #808080;
+            border: 1px solid #bdbdbd;
             border-radius: 5px;
+        }
+        h2 {
+            color: #212121;
         }
     </style>
 </head>
 <body>
     <div id="header">
-        <button onclick="showMainScreen()">Inicio</button>
         <button onclick="showUserInfo()">Ver Info</button>
+        <button onclick="editUserInfo()">Editar Información</button>
     </div>
 
     <div id="main">
@@ -70,32 +86,30 @@
             altura: ""
         };
 
-        function showMainScreen() {
-            const main = document.getElementById('main');
-            main.innerHTML = `
-                <h2>Bienvenido, ${userInfo.nombre || "Invitado"}</h2>
-                <button onclick="manageRoutines()">Rutinas</button><br>
-                <button onclick="editUserInfo()">Editar Información del Usuario</button><br>
-                <button onclick="registerExercise()">Registrar Ejercicio Realizado</button><br>
-                <button onclick="viewProgress()">Ver Progreso</button><br>
-                <button onclick="closeApp()">Salir</button>
-            `;
-        }
-
         function showLoginScreen() {
             const main = document.getElementById('main');
             main.innerHTML = `
                 <h2>Inicio de Sesión</h2>
                 <label>Nombre de Usuario:</label>
                 <input type="text" id="username"><br><br>
-                <button onclick="login()">Iniciar Sesión</button>
-                <button onclick="showMainScreen()">Inicio</button>
+                <button class="save-button" onclick="login()">Iniciar Sesión</button>
             `;
         }
 
         function login() {
             userInfo.nombre = document.getElementById('username').value;
             showMainScreen();
+        }
+
+        function showMainScreen() {
+            const main = document.getElementById('main');
+            main.innerHTML = `
+                <h2>Bienvenido, ${userInfo.nombre}</h2>
+                <button onclick="manageRoutines()">Rutinas</button><br>
+                <button onclick="registerExercise()">Registrar Ejercicio Realizado</button><br>
+                <button onclick="viewProgress()">Ver Progreso</button><br>
+                <button class="back-button" onclick="closeApp()">Salir</button>
+            `;
         }
 
         function manageRoutines() {
@@ -105,7 +119,7 @@
                 <button onclick="registerRoutines()">Registrar Rutinas</button><br>
                 <button onclick="viewRoutines()">Ver Rutinas</button><br>
                 <button onclick="deleteRoutines()">Eliminar Rutinas</button><br>
-                <button onclick="showMainScreen()">Inicio</button>
+                <button class="back-button" onclick="showMainScreen()">Atrás</button>
             `;
         }
 
@@ -121,8 +135,8 @@
                 <input type="text" id="sets"><br><br>
                 <label>Descripción:</label>
                 <input type="text" id="description"><br><br>
-                <button onclick="saveRoutine()">Guardar Rutina</button><br>
-                <button onclick="manageRoutines()">Inicio</button>
+                <button class="save-button" onclick="saveRoutine()">Guardar Rutina</button><br>
+                <button class="back-button" onclick="manageRoutines()">Atrás</button>
             `;
         }
 
@@ -139,7 +153,7 @@
                     <li>Rutina 1: Ejercicio A, 10 repeticiones, 3 series</li>
                     <li>Rutina 2: Ejercicio B, 15 repeticiones, 4 series</li>
                 </ul>
-                <button onclick="manageRoutines()">Inicio</button>
+                <button class="back-button" onclick="manageRoutines()">Atrás</button>
             `;
         }
 
@@ -151,7 +165,7 @@
                     <li>Rutina 1 <button onclick="deleteRoutine('Rutina 1')">Eliminar</button></li>
                     <li>Rutina 2 <button onclick="deleteRoutine('Rutina 2')">Eliminar</button></li>
                 </ul>
-                <button onclick="manageRoutines()">Inicio</button>
+                <button class="back-button" onclick="manageRoutines()">Atrás</button>
             `;
         }
 
@@ -170,8 +184,8 @@
                 <input type="text" id="weight" value="${userInfo.peso}" placeholder="Peso en kg"><br><br>
                 <label>Altura (en cm):</label>
                 <input type="text" id="height" value="${userInfo.altura}" placeholder="Altura en cm"><br><br>
-                <button onclick="saveUserInfo()">Guardar Cambios</button><br>
-                <button onclick="showMainScreen()">Inicio</button>
+                <button class="save-button" onclick="saveUserInfo()">Guardar Cambios</button><br>
+                <button class="back-button" onclick="showMainScreen()">Atrás</button>
             `;
         }
 
@@ -192,7 +206,7 @@
             const main = document.getElementById('main');
             main.innerHTML = `
                 <h2>Ver Progreso</h2>
-                <button onclick="showMainScreen()">Inicio</button><br>
+                <button class="back-button" onclick="showMainScreen()">Atrás</button><br>
                 <canvas id="weightChart"></canvas><br>
                 <canvas id="heightChart"></canvas><br>
             `;
@@ -259,10 +273,10 @@
         }
 
         function closeApp() {
-            alert('Funcionalidad de cerrar la aplicación no implementada.');
+            alert('App cerrada');
         }
 
-        // Mostrar la pantalla de inicio de sesión por defecto al cargar la página
+        // Mostrar la pantalla de inicio de sesión al cargar la página
         showLoginScreen();
     </script>
 </body>
